# solpredict

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260412_01_create_prediction_tables.py
api/: Dockerfile  deps.py  main.py  requirements.txt
api/routes/: history.py  models.py  predict.py
data/: results.json
docs/: api-reference.md  architecture.md  ml-pipeline.md  models.md
docs/superpowers/plans/: 2026-03-16-solubility-prediction-tool.md
docs/superpowers/specs/: 2026-03-16-solubility-prediction-tool-design.md
notebooks/: training.ipynb
scripts/: train.py
solpredict/: __init__.py  config.py  exceptions.py  featurize.py  logging_setup.py  model.py  tracking.py
solpredict/db/: __init__.py  engine.py  models.py  repositories.py
solpredict/training/: __init__.py  cv.py  data.py  pipeline.py  tune.py
tests/: conftest.py  test_api.py  test_config.py  test_exceptions.py  test_featurize.py  test_logging_setup.py  test_migrations.py  test_model.py
tests/api/: test_history.py  test_models_endpoint.py  test_predict.py
tests/db/: test_models.py  test_repositories.py
tests/fixtures/: esol_smoke.csv
tests/training/: test_cv.py  test_data.py  test_pipeline.py  test_tune.py
web/: README.md  package-lock.json
web/public/: results.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/comparison/: page.tsx
web/src/app/methodology/: page.tsx
