[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solpredict"
version = "0.2.0"
description = "Molecular solubility prediction with Random Forest and Neural Network models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Basil Liu" }]
dependencies = [
    "rdkit>=2026.3.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "joblib>=1.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "optuna>=3.6",
    "mlflow>=2.14",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
include = ["solpredict*"]
exclude = ["tests*", "api*", "scripts*", "web*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "web", ".venv", "models", "data"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["solpredict"]

[[tool.mypy.overrides]]
module = ["api.*", "scripts.*", "tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["rdkit.*", "torch.*", "mlflow.*", "pandas.*", "sklearn.*", "joblib.*", "optuna.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=solpredict --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["solpredict"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."
